# bincom-test

./: Procfile  manage.py  pyproject.toml  requirements.txt
bincom_test_config/: asgi.py  wsgi.py
bincom_test_config/settings/: development.py  production.py
core/: fields.py  forms.py  models.py  urls.py  utils.py  views.py
templates/: base.html  index.html  individual_polling_unit.html  store_new_polling_unit_result.html  summed_pu_in_lga.html
