[tool.poetry]
name = "bincom_test"
version = "0.1.0"
description = ""
authors = ["Adewumi Isaac <ienioladewumi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.8"
django-environ = "^0.7.0"
mysqlclient = "^2.0.3"
django-crispy-forms = "^1.13.0"
crispy-bootstrap5 = "^0.6"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
ipython = "^7.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
